--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -65,6 +65,33 @@ header a{
   color:  #ffffff;
   padding: 1rem;
 }
+ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+li{
+    margin-top: 1rem;
+}
+
+button{
+    padding: 1rem;
+    border-radius: 0.5rem;
+    border:0.1rem #4a4a4a solid;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+    background-color: #f8faf8;
+    cursor: pointer;
+}
+button.primary{
+    background-color: gold;
+}
+button.block{
+    width: 100%;
+}
 a.brand{
 
   color: #ffffff;
@@ -92,6 +119,15 @@ h2{
 .row.center{
   justify-content: center;
 }
+.row.top{
+    align-items: flex-start;
+}
+.col-1{
+    flex: 1 1 25rem;
+}
+.col-2{
+    flex: 1 2 50rem;
+}
 
 img{
   border-radius: 0.5rem;
@@ -106,7 +142,7 @@ img.medium{
 
 .card{
   border: 0.1rem #c0c0c0 solid;
-  background-color: #f8faf8;
+  background-color: hsl(283, 20%, 93%);
   border-radius: 0.5rem;
   margin: 1rem;
 }
@@ -130,4 +166,10 @@ img.medium{
 
 .rating span:last-child{
   color: #000;
+}
+.sucess{
+    color: green;
+}
+.danger{
+    color: red;
 }
