--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,102 +1,106 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-#root{
-    height: 100%;
+#root {
+  height: 100%;
 }
 
-html{
-
+html {
   font-size: 62.5%; /* 16px x62.5 =10px=rem*/
   box-sizing: border-box;
 }
 
-body{
+body {
   margin: 0;
   height: 100vh;
   font-size: 1.6rem;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.grid-container
-{
+.grid-container {
   display: grid;
-  grid-template-areas: 
-  'header'
-  'main'
-  'footer';
+  grid-template-areas:
+    "header"
+    "main"
+    "footer";
 
   grid-template-columns: 1fr;
   grid-template-rows: 5rem 1fr 5rem;
   height: 100%;
 }
-header{
-
+header {
   grid-area: header;
   background-color: #203040;
 }
 
-main{
+main {
   grid-area: main;
   padding: 1rem;
 }
 
-footer{
+footer {
   grid-area: footer;
   background-color: #203040;
   color: #ffffff;
-
 }
 /* Common*/
 
-a{
+a {
   text-decoration: none;
 }
-a:hover{
+a:hover {
   color: #ff8000;
 }
 
-header a{
-  color:  #ffffff;
+header a {
+  color: #ffffff;
   padding: 1rem;
 }
-ul{
-    margin: 0;
-    padding: 0;
-    list-style: none;
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
-li{
-    margin-top: 1rem;
+li {
+  margin-top: 1rem;
 }
-
-button{
-    padding: 1rem;
-    border-radius: 0.5rem;
-    /* border:0.1rem #4a4a4a solid; */
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+input,
+select,
+textarea,
+button {
+  padding: 1rem;
+  border-radius: 0.5rem;
+  /* border:0.1rem #4a4a4a solid; */
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-    background-color: #f8faf8;
-    cursor: pointer;
 }
-button.primary{
-    background-color: #d3bd40;
+
+button {
+  background-color: #f8faf8;
+  cursor: pointer;
 }
-button.block{
-    width: 100%;
+button.primary {
+  background-color: #d3bd40;
 }
-button:hover{
+button.block {
+  width: 100%;
+}
+
+input:hover,
+select:hover,
+textarea:hover,
+button:hover {
   border: 0.1rem #404040 solid;
 }
-a.brand{
-
+a.brand {
   color: #ffffff;
   font-size: 3rem;
   font-weight: bold;
@@ -108,88 +112,85 @@ a.brand{
   align-items: center;
 }
 
-h1{
-
+h1 {
   font-size: 1.8rem;
   padding: 1rem 0;
 }
-h2{
-
+h2 {
   font-size: 1.6rem;
   padding: 1rem 0;
 }
 /* For footer*/
-.row.center{
+.row.center {
   justify-content: center;
 }
-.row.top{
-    align-items: flex-start;
+.row.top {
+  align-items: flex-start;
 }
-.col-1{
-    flex: 1 1 25rem;
+.col-1 {
+  flex: 1 1 25rem;
 }
-.col-2{
-    flex: 1 2 50rem;
+.col-2 {
+  flex: 1 2 50rem;
 }
 
-img{
+img {
   border-radius: 0.5rem;
-
 }
-img.medium{
+img.medium {
   max-width: 25rem;
   width: 100%;
 }
-img.large{
+img.large {
   width: 100%;
 }
 
 /*card*/
 
-.card{
+.card {
   border: 0.1rem #c0c0c0 solid;
   background-color: hsl(283, 20%, 93%);
   border-radius: 0.5rem;
   margin: 1rem;
 }
-.card-body{
+.card-body {
   padding: 1rem;
 }
 
-.card-body >*{
+.card-body > * {
   margin-bottom: 0.5rem;
-} 
-.price{
+}
+.price {
   font-size: 2rem;
 }
 
 /*rating*/
 
-.rating span{
+.rating span {
   color: gold;
   margin: 0.1rem;
 }
 
-.rating span:last-child{
+.rating span:last-child {
   color: #000;
 }
-.sucess{
-    color: green;
+.sucess {
+  color: green;
 }
-.danger{
-    color: red;
+.danger {
+  color: red;
 }
-.alert{
+.alert {
   padding: 1rem;
   border: 0.1rem solid transparent;
   border-radius: 0.5rem;
 }
 
-.alert-info{
+.alert-info {
   color: #2020a0;
   background-color: #e0e0ff;
 }
-.alert-danger{
-   color: #a02020;
+.alert-danger {
+  color: #a02020;
   background-color: rgb(233, 141, 141);
 }
